force-app/main/default/objects/FINS_CoverageTeam__c/FINS_CoverageTeam__c.object-meta.xml
<CustomObject>
    <label>Coverage Team</label>
    <nameField>
        <displayFormat>AP-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>