force-app/main/default/objects/FINS_CoverageTeam__c/fields/Coverage_Role__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Role__c</fullName>
    <label>Coverage Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>Coverage Banker</fullName>
            </value>
            <value>
                <fullName>Investment Grade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>